fix(scripts): 避免无关插件生命周期重复加载脚本
- 仅在脚本声明变化时重新物化资源，保留显式强制刷新
- 将正常空目录诊断降为调试日志，避免重复资源告警